[package]
description = "Aerostream is Bluesky client using EventStream."
edition = "2021"
license = "Apache-2.0"
name = "aerostream"
repository = "https://github.com/shigepon7/aerostream"
version = "0.13.1"

[[bin]]
name = "aerostream"
required-features = ["terminal"]

[features]
terminal = [
  "crossterm",
  "fern",
  "image",
  "textwrap",
  "ratatui",
  "ratatui-image",
  "webbrowser",
]

[dependencies]
anyhow = "1.0.75"
chrono = {version = "0.4.31", features = ["serde"]}
crossterm = {version = "0.27.0", optional = true}
fern = {version = "0.6.2", optional = true}
image = {version = "0.24.7", optional = true}
indexmap = {version = "2.1.0", features = ["serde"]}
leb128 = "0.2.5"
libipld = {version = "0.16.0", features = ["serde-codec"]}
log = "0.4.20"
ratatui = {version = "0.23.0", optional = true}
ratatui-image = {version = "0.3.5", features = [
  "crossterm",
], default-features = false, optional = true}
regex = "1.10.2"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
textwrap = {version = "0.16.0", optional = true}
tiny_http = "0.12.0"
tungstenite = {version = "0.20.1", features = ["rustls-tls-webpki-roots"]}
ureq = {version = "2.8.0", features = ["json"]}
url = "2.4.1"
urlencoding = "2.1.3"
webbrowser = {version = "0.8.12", optional = true}

[dev-dependencies]
env_logger = "0.10.0"
urandom = "0.1.1"
