[package]
description = "Aerostream is Bluesky client using EventStream."
edition = "2021"
license = "Apache-2.0"
name = "aerostream"
repository = "https://github.com/shigepon7/aerostream"
version = "0.14.4"

[[bin]]
name = "aerostream"
required-features = ["terminal"]

[features]
terminal = [
  "crossterm",
  "fern",
  "image",
  "textwrap",
  "ratatui",
  "ratatui-image",
  "webbrowser",
]

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
crossterm = { version = "0.27.0", optional = true }
fern = { version = "0.6.2", optional = true }
image = { version = "0.24.9", optional = true }
indexmap = { version = "2.2.3", features = ["serde"] }
leb128 = "0.2.5"
libipld = { version = "0.16.0", features = ["serde-codec"] }
log = "0.4.21"
ratatui = { version = "0.26.1", optional = true }
ratatui-image = { version = "0.8.1", features = [
  "crossterm",
], default-features = false, optional = true }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
serde_yaml = "0.9.32"
textwrap = { version = "0.16.1", optional = true }
tiny_http = "0.12.0"
tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
ureq = { version = "2.9.6", features = ["json"] }
url = "2.5.0"
urlencoding = "2.1.3"
webbrowser = { version = "0.8.12", optional = true }

[dev-dependencies]
env_logger = "0.11.2"
urandom = "0.1.1"
